# cuberoot.me

./: .gitattributes  .gitignore  .ignore  .jekyll-metadata  2x2x2.html  404.html  CLAUDE.md  CNAME  CUBEROOT_ME.md  DEPLOYMENT.md  Gemfile  HANDOFF_WCA_STATS_REACT.md  README.md  README.zh-CN.md  TASK.md  TODO.md  TODO_recon.md  _config.yml  _stats_words.txt  _sync_RubiksSolverDemo.ps1  _sync_cstimer.ps1  _sync_cstimer_scramble.ps1  algTrainer.html  callback.html  cn_disputed_patches.geojson  cross_trainer.html  cubecuberoot.me.tmpcc2019.json  cuberuiminyan.github.io.tmpanalyze.html  documentation.html  eocross_trainer.html  index.html  jsonEditor.html  manifest.json  pairing_trainer.html  pseudo_pairing_trainer.html  pseudo_xcross_trainer.html  sheet_functions.md  sheet_stat.md  solver.html  style.css  (+5 more)
fmc/cubelib-server/: Cargo.toml
solver/: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEFINITIONS.md  MALLARD_FMC_PLAN.md  NONWCA_PUZZLE_LOOP.md  PORTING_NOTES.md  README.md  SOLVER_LOOP.md  SQ1_SLASH_OPTIMAL.md  SQ1_TWOPHASE_BENCH.md  SQ1_WCA_GODS_NUMBER.md  SQ1_WCA_LOOP.md  STATE_USAGE.md  TESTING.md  USAGE.md  VARIANT_PLAYBOOK.md  WASM_PORT_PLAN.md  build_wasm.ps1  index.html  verify.ps1
solver/.cargo/: config.toml
solver/333opt/: .gitignore  README.md  export_optimal.mjs  gen-table.mjs  inject.mjs  inject_first_appearance.mjs  pull.mjs  solve.mjs  solve_loop.mjs
solver/reference/: claudecode.cpp
solver/src/: block222_solver.rs  block223_solver.rs  chain_solver.rs  cross_restrict_solver.rs  cross_solver.rs  cube222_solver.rs  cube_common.rs  dr_solver.rs  eo_cross_solver.rs  eoline_solver.rs  executor.rs  f2b_solver.rs  f2leo_solver.rs  fr_solver.rs  htr_phase2_solver.rs  htr_solver.rs  lib.rs  logo.rs  lsll_solver.rs  move_tables.rs  pair_solver.rs  pocket_solver.rs  prune_create.rs  prune_tables.rs  pseudo_f2leo_solver.rs  pseudo_pair_solver.rs  pseudo_xcross_solver.rs  pseudo_xxcross_solver.rs  pseudo_xxxcross_solver.rs  pyraminx_solver.rs  roux_s1_solver.rs  skewb_solver.rs  sq1_solver.rs  sq1_twophase.rs  wasm.rs  xcross_restrict_solver.rs  xcross_solver.rs
solver/test_data/: sq1_exact.csv  sq1_scrambles.txt
solver/testdata/: scramble_5.txt
solver/tests/: e2e_block222.rs  e2e_block223.rs  e2e_cross.rs  e2e_cube222.rs  e2e_dr.rs  e2e_eoline.rs  e2e_f2b.rs  e2e_f2leo.rs  e2e_htr.rs  e2e_htr2.rs  e2e_pocket.rs  e2e_pseudo.rs  e2e_pyraminx.rs  (+4 more)
(+31095 files in other folders)
